// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayHorizontalCard should render a ClayHorizontalCard with actionItems 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters"></div>
      <div class="flex-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#1">Save</a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with checkbox \`name\` 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <use xlink:href="icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with checkbox \`value\` 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" value="checkbox" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <use xlink:href="icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with checkbox checked 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <use xlink:href="icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with checkbox disabled 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <use xlink:href="icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with checkbox indeterminate 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <span class="sticker sticker-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
                <use xlink:href="icons.svg#folder"></use>
              </svg>
            </span>
            <div class="flex-col flex-col-expand flex-col-gutters"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with classes 1`] = `
<div class="card-type-directory card card-horizontal my-custom-class">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters"></div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with id 1`] = `
<div class="card-type-directory card card-horizontal" id="myId">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters"></div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with title 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters">
        <div class="card-title text-truncate" title="empty-background.png">empty-background.png</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with url 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters">
        <a class=" card-title text-truncate" href="#1"></a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render the default markup 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <span class="sticker sticker-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="icons.svg#folder"></use>
        </svg>
      </span>
      <div class="flex-col flex-col-expand flex-col-gutters"></div>
    </div>
  </div>
</div>
`;
